--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   pattern_formatter: ^1.0.0
   flutter_typeahead: ^1.7.0
   intro_slider: ^2.2.8
+  flutter_slidable: ^0.5.4
+  flutter_spinkit: ^4.1.1+1
+  flutter_sticky_header: ^0.4.0
+  side_header_list_view: ^0.0.4
+  strings: ^0.1.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
