--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_sticky_header: ^0.4.0
   side_header_list_view: ^0.0.4
   strings: ^0.1.2
+  url_launcher: ^5.4.1
+  pdf: ^1.3.25
 
 
   # The following adds the Cupertino Icons font to your application.
