--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,11 @@ dependencies:
   strings: ^0.1.2
   url_launcher: ^5.4.1
   pdf: ^1.3.25
-
+  permission_handler: ^4.0.0
+  contacts_service: ^0.3.10
+  #flutter_statusbarcolor: ^0.2.3
+  #floating_search_bar: ^0.2.0
+  #device_info: ^0.4.1+4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
