--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,16 +22,9 @@ dependencies:
   http: ^0.12.0+2
   date_range_picker: ^1.0.5
   table_calendar: ^2.2.1
-  provider: ^3.2.0
-  bloc: ^2.0.0
-  flutter_bloc: ^2.1.1
-  rxdart: ^0.22.6
+  provider: ^4.0.0
   flutter_local_notifications: ^0.8.4+3
-  mobx: ^0.3.9+3
-  flutter_mobx: ^0.3.3+3
   shared_preferences: ^0.5.6
-  image_picker: ^0.6.1
-  image_cropper: ^1.1.1
   path_provider: ^1.5.1
   flutter_svg: ^0.15.0
   fluttie: ^0.5.0
@@ -47,9 +40,11 @@ dependencies:
   pdf: ^1.3.25
   permission_handler: ^4.0.0
   contacts_service: ^0.3.10
-  #flutter_statusbarcolor: ^0.2.3
-  #floating_search_bar: ^0.2.0
-  #device_info: ^0.4.1+4
+  flutter_statusbarcolor: ^0.2.3
+  floating_search_bar: ^0.2.0
+  device_info: ^0.4.1+4
+  flutter_secure_storage: ^3.3.1+1
+  web_socket_channel: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,9 +53,6 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.3.1
-  mobx_codegen: ^0.3.9
-
 
 
 # For information on the generic Dart part of this file, see the
