Add Mask Input for Client
Refactoring and Restructuring code

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,4 +11,4 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Wed Dec 18 09:05:30 MSK 2019
-org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
+#org.gradle.jvmargs=-Xmx1536M -Dkotlin.daemon.jvm.options\="-Xmx1536M"
