--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   device_info: ^0.4.1+4
   flutter_secure_storage: ^3.3.1+1
   web_socket_channel: ^1.1.0
+  imei_plugin: ^1.1.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
