--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  flutter_cupertino_localizations: ^1.0.1
   http: ^0.12.0+2
+  month_picker_dialog: ^0.3.0
   date_range_picker: ^1.0.5
   table_calendar: ^2.2.1
   provider: ^4.0.0
@@ -46,7 +50,8 @@ dependencies:
   flutter_secure_storage: ^3.3.1+1
   web_socket_channel: ^1.1.0
   imei_plugin: ^1.1.6
-  intl: ^0.16.1
+  intl: ^0.16.0
+  jiffy: ^2.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
