--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   jiffy: ^2.2.0
   flutter_colorpicker: ^0.2.6
   expandable: ^4.0.2
+  dio: ^3.0.8
 
 
   # The following adds the Cupertino Icons font to your application.
