--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_colorpicker: ^0.2.6
   expandable: ^4.0.2
   dio: ^3.0.8
+  flutter_picker: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
