--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   expandable: ^4.0.2
   dio: ^3.0.8
   flutter_picker: ^1.1.0
+  image: ^2.1.4
+  flutter_share: ^1.0.2+1
+  pdf_viewer_plugin: ^1.0.0+2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -80,7 +83,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - logo/logo.png
+    - assets/logo.png
+  #  - logo/logo.png
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
