--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   pdf_viewer_plugin: ^1.0.0+2
   charts_flutter: ^0.8.1
   fl_chart: ^0.8.1
+  flutter_sparkline: ^0.1.0
+  mp_chart: ^0.1.7
+  bezier_chart: ^1.0.16
+
 
 
   # The following adds the Cupertino Icons font to your application.
