--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   date_range_picker: ^1.0.5
   table_calendar: ^2.2.1
   provider: ^4.0.0
-  flutter_local_notifications: ^0.8.4+3
+  flutter_local_notifications: ^1.1.7+1
   shared_preferences: ^0.5.6
   path_provider: ^1.5.1
   flutter_svg: ^0.15.0
@@ -61,6 +61,7 @@ dependencies:
   flutter_sparkline: ^0.1.0
   mp_chart: ^0.1.7
   bezier_chart: ^1.0.16
+  wave: ^0.0.8
 
 
 
