--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_local_notifications: ^1.1.7+1
   shared_preferences: ^0.5.6
   path_provider: ^1.5.1
+  path_provider_ex: ^1.0.1
   flutter_svg: ^0.15.0
   pattern_formatter: ^1.0.0
   flutter_typeahead: ^1.7.0
@@ -63,7 +64,8 @@ dependencies:
   bezier_chart: ^1.0.16
   wave: ^0.0.8
   flutter_full_pdf_viewer: ^1.0.6
-
+  share_extend: ^1.1.1
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
