--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   flutter_full_pdf_viewer: ^1.0.6
   share_extend: ^1.1.1
   
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -74,6 +75,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.4
+flutter_icons:
+  android: true 
+  ios: true
+  image_path: "assets/ic_launcher.png"
 
 
 # For information on the generic Dart part of this file, see the
